fixed scrollbar issues. closes #862

--- a/public/bootstrap/less/trp3.less
+++ b/public/bootstrap/less/trp3.less
@@ -641,7 +641,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#17202a', end
   .trpToolbarList {
     min-height: 40px;
     max-height: 140px;
-    overflow: scroll;
+    overflow: auto;
   }
 
   @media @mid {
