--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -9,7 +9,7 @@
   display: inline-block;
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: auto;
   padding-right: 12px;
 }
 
